--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,76 @@ prepend scripts
     script(src="/socket.io/socket.io.js")
 
 prepend content
-    h1= title
-    p Welcome to #{title}
+    .container-fluid
+        .row
+            .span6 
+                h1 Player
+                .row
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+            .span6 
+                h1 Player
+                .row
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+        .row
+            .span6 
+                h1 Player
+                .row
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+            .span6 
+                h1 Player
+                .row
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+        .row
+            .span2
+                button.btn Call Liar
+        .row
+            .span6
+                h1 Bet
+        .row
+            .span2.offset6
+                button.btn Higher
+        .row
+            .span12
+                .span2.offset2
+                    button.btn Fewer
+                .span1 Die
+                .span1 Die
+                .span1 Die
+                .span1 Die
+                .span1 Die
+                .span2
+                    button.btn More
+        .row
+            .span2.offset6
+                button.btn Lower
+        .row
+            .span2
+                button.btn Bid
+        .row
+            .span6 
+                h1 Hand
+                .row
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
+                    .span1 Die
 
     
     script(src="/socket.io/socket.io.js")
