--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,3 +14,5 @@ html
                 script(src="/js/bootstrap.min.js")
     body(style="padding-top:60px")
         block content
+        script(type="application/javascript")
+            $('.dropdown-toggle').dropdown()
