--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,8 @@ html
             link(rel='stylesheet', href='/css/bootstrap.min.css')
             link(rel='stylesheet', href='/css/style.css')
             block scripts
-                script(src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
+                //- script(src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js")
+                script(src="/js/jquery.min.js")
                 script(src="/js/knockout.js")
                 script(src="/js/knockout.mapping.js")
                 script(src="/js/bootstrap-dropdown.js")
